Back-end: api completa
